device calendar date issue

--- a/500WATTAndroid/Resources/layout/AdjustTrainningActivity.axml
+++ b/500WATTAndroid/Resources/layout/AdjustTrainningActivity.axml
@@ -49,7 +49,7 @@
                     android:minHeight="25px"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:id="@+id/linearLayout10"
+                    android:id="@+id/bgType"
                     android:layout_marginLeft="10dp"
                     android:background="#ffe5a109">
                     <ImageView
@@ -158,7 +158,7 @@
                     android:layout_height="match_parent"
                     android:id="@+id/ActionTimeChanged"
                     android:layout_weight="5"
-                    android:thumbTint="#ffe5a109"
+                    android:thumbTint="#EBAF01"
                     android:progress="0"
                     android:max="360"
                     android:progressTint="#ffe5a109"
@@ -207,7 +207,7 @@
                     android:layout_height="match_parent"
                     android:id="@+id/ActionDistanceChanged"
                     android:layout_weight="5"
-                    android:thumbTint="#ffe5a109"
+                    android:thumbTint="#EBAF01"
                     android:progress="0"
                     android:max="250"
                     android:progressTint="#ffe5a109"
@@ -256,7 +256,7 @@
                     android:layout_height="match_parent"
                     android:id="@+id/ActionTSSChanged"
                     android:layout_weight="5"
-                    android:thumbTint="#ffe5a109"
+                    android:thumbTint="#EBAF01"
                     android:progress="0"
                     android:max="400"
                     android:progressTint="#ffe5a109"
