--- a/500WATTAndroid/Resources/layout/RegisterActivity.axml
+++ b/500WATTAndroid/Resources/layout/RegisterActivity.axml
@@ -514,7 +514,7 @@
             android:layout_height="60dp"
             android:id="@+id/linearLayout7">
             <Button
-                android:text="GO HEJA"
+                android:text="GO 500WATT"
                 android:id="@+id/ActionSignUp"
                 android:textColor="#ffffff"
                 android:background="#ffe5a109"
